--- a/languages/en-US/general/fortnite.json
+++ b/languages/en-US/general/fortnite.json
@@ -17,5 +17,5 @@
     "MATCH": "Match",
     "KILLS": "Kills",
     "KILL": "Kill",
-    "FOOTER": "By Atlanta using fortnitetracker.com"
+    "FOOTER": "By NewBot using fortnitetracker.com"
 }
