--- a/languages/en-US/fun/fml.json
+++ b/languages/en-US/fun/fml.json
@@ -2,5 +2,5 @@
     "DESCRIPTION": "Gets a random FML",
     "USAGE": "{{prefix}}fml",
     "EXAMPLES": "{{prefix}}fml",
-    "FOOTER": "blague.xyz | By Skiz#0001"
+    "FOOTER": "NewBot FMLs | By T̶̐͝ē̶̑m̴̋͊ṕ̸̔l̶͋͆â̵̛r̷̔̕#0001"
 }
