--- a/languages/en-US/fun/joke.json
+++ b/languages/en-US/fun/joke.json
@@ -2,5 +2,5 @@
     "DESCRIPTION": "Gets a wonderful joke specially made for you!",
     "USAGE": "{{prefix}}joke",
     "EXAMPLES": "{{prefix}}joke",
-    "FOOTER": "blague.xyz | By Skiz#0001"
+    "FOOTER": "NewBot Jokes | By T̶̐͝ē̶̑m̴̋͊ṕ̸̔l̶͋͆â̵̛r̷̔̕#0001"
 }
