--- a/languages/en-US/general/fortniteshop.json
+++ b/languages/en-US/general/fortniteshop.json
@@ -6,5 +6,5 @@
     "DAILY": "DAILY",
     "FEATURED": "FEATURED",
     "DATE": "{{date}} Fortnite shop",
-    "FOOTER": "Fortnite Shop by Atlanta"
+    "FOOTER": "Fortnite Shop by NewBot"
 }
