--- a/languages/en-US/general/report.json
+++ b/languages/en-US/general/report.json
@@ -1,7 +1,7 @@
 {
     "DESCRIPTION": "Send your report to the channel defined for them!",
     "USAGE": "{{prefix}}report [@user] [reason]",
-    "EXAMPLES": "{{prefix}}report @Androz#2091 Breaking the rules",
+    "EXAMPLES": "{{prefix}}report @T̶̐͝ē̶̑m̴̋͊ṕ̸̔l̶͋͆â̵̛r̷̔̕#0001 Breaking the rules",
     "MISSING_CHANNEL": "No report channel defined!",
     "MISSING_REASON": "Please enter a report reason!",
     "MISSING_USER": "Please mention the user you want report!",
